Added new picture, name, phone number

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <h1>Viktors hemsida</h1>
+    <h1>Viktors Restaurang</h1>
     <div class="Sidebar">
       <a
         ><div class="Item">
@@ -39,7 +39,8 @@
           <div class="Square"></div></div
       ></a>
       <div class="Item">
-        <p style="width: 100%">Kontaktakta mig</p>
+        <p style="width: 100%">Vårt Telefonnummer:</p>
+        <a href="tel:+46734004208">+46734004208</a>
         <div class="Square"></div>
       </div>
       <div class="Navigate"><p></p></div>
