Changed hover colours

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="Sidebar">
       <a
         ><div class="Item">
-          <p style="width: 100%">Om mig</p>
+          <p style="width: 100%">Om oss</p>
           <div class="Square"></div></div
       ></a>
       <a href="https://www.instagram.com/realviktorkarlsson/"
