--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <h1>Viktors Restaurang</h1>
-    <div class="Sidebar">
+    <div class="Bar">
       <a
         ><div class="Item">
           <p style="width: 100%">Om oss</p>
@@ -39,11 +39,11 @@
           <div class="Square"></div></div
       ></a>
       <div class="Item">
-        <p style="width: 100%">Vårt Telefonnummer:</p>
-        <a href="tel:+46734004208">+46734004208</a>
+        <p style="width: 100%">Vårt Telefonnummer: <a href="tel:+46734004208">+46734004208</a></p>
         <div class="Square"></div>
       </div>
-      <div class="Navigate"><p></p></div>
-    </div>
+      <footer>
+        <img src="tacko.jpg" alt="" width="10%">
+      </footer>
   </body>
 </html>
