Fixed minor glitches; Added copyright message

--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
         <p style="width: 100%">Vårt Telefonnummer: <a href="tel:+46734004208">+46734004208</a></p>
         <div class="Square"></div>
 	  </div>
-	</div>
-
+  </div>
+  
 	<footer>
-	  <img src="tacko.jpg" alt="" width="250">
-	</footer>
+    <p>This Website provides legal information and referrals. For legal advice, contact a lawyer.</p>
+      <p>© 2003-2020 Viktor, Karlsson, a Federal Not-for-profit Corporation. All rights reserved.</p>
+  </footer>
   </body>
 </html>
