--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     />
   </head>
   <body>
+    <header>
     <h1>Viktors Restaurang</h1>
+  </header>
     <div class="Bar">
       <a
         ><div class="Item">
@@ -40,13 +42,12 @@
       ></a>
       <div class="Item">
         <p style="width: 100%">Vårt Telefonnummer: <a href="tel:+46734004208">+46734004208</a></p>
-        <div class="Square"></div>
-	  </div>
+        <div class="Square"></div></div>
   </div>
   
 	<footer>
     <p>This Website provides legal information and referrals. For legal advice, contact a lawyer.</p>
-      <p>© 2003-2020 Viktor, Karlsson, a Federal Not-for-profit Corporation. All rights reserved.</p>
+      <p>© 2003-2020 Viktor, Karlsson, a Federal For-profit Corporation. All rights reserved.</p>
   </footer>
   </body>
 </html>
