--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
   <div>
     <ul>
     <li>Classic Taco</li>
+    <p></p>
     <li>Våra klassiska tacos på hårda skal, köttfärs, rädisor, salsa, guacamole, romansallad och majs. En väldigt god, simpel, och billig rätt</li>
+    <p></p>
     <li>Pris: 420kr</li>
   </ul>
   </div>
@@ -57,8 +59,10 @@
   
 
 	<footer>
+    <div class="fot-text">
     <p>This Website provides legal information and referrals. For legal advice, contact a lawyer.</p>
       <p>© 2003-2020 Viktor, Karlsson, a Federal For-profit Corporation. All rights reserved.</p>
+    </div>
   </footer>
   </body>
 </html>
